app/styles/_users.sass
$thumb_size: 48px
$micro_size: 24px

.new_user
  padding: 10px

.new_users, .create_users
  h2
    display: block
    margin:
      left: 30px
  .submit
    margin-top: 10px
    display: block
    input
      float: none
  .use_this_email
    margin: 10px
    padding: 10px
    border: 1px rgb(220, 220, 150) solid
    background-color: rgb(255, 255, 200)
    font-size: 12px

.log_into_your_account
  color: red

.show_users
  .comment, .upload
    .info
      display: none
    .block
      width: 620px


.unconfirmed_email_users
  .content
    padding:
      top: 10px
      left: 20px
      bottom: 10px
    h2
      font-family: Helvetica
      font-size: 24px
      margin: 0px
        top: 10px
        bottom: 15px
    h3
      font-size: 16px
    p, li
      font-size: 13px
      margin-bottom: 5px

.edit_users,.update_users
  .content_wrap
    float: right
    padding: 10px
      left: 0px
  .column_wrap
    float: left
    .submit
      text-align: right
  .column
    -moz-border-radius:
      topleft: 5px
    -webkit-border-top-left-radius: 5px
  label
    float: left
    width: 120px
    text-align: right
    padding-right: 10px
    vertical-align: middle
    font-size: 12px
  .text_area
    padding: 5px 0px
    textarea
      height: 4em
  #change_password_link
    margin:
      bottom: 5px
      left: 130px
    font-size: 12px
  .many_fields
    padding-top: 10px
    border-top: solid 1px rgb(230, 230, 230)
    clear: both
    label
      padding-bottom: 10px
  .fields
    float: right
    width: 510px
    input
      width: 140px
  .submit
    margin-top: 20px
    padding-left: 300px
    clear: both
  .notifications
    label
      float: none
    .notify
      padding-bottom: 7px
  #change_password_link
    margin:
      top: 20px
      bottom: 20px

div.upload_avatar
  .avatar
    float: left
    width: $thumb_size
    height: $thumb_size
    margin-right: 5px
    a
      display: block
      width: $thumb_size
      height: $thumb_size
      margin-right: 5px
      background: url(/images/avatar_thumb_corners.png)
    a:hover
      background: url(/images/avatar_thumb_corners_hover.png)
  p.actions
    padding-top: 2px
    margin: 0px
    a
      display: block
      font-size: 12px
      color: rgb(120, 120, 120)
      margin-top: 5px
      text-decoration: underline
    a:hover
      text-decoration: none

.new_user_avatar
  float: left
  width: $thumb_size
  height: $thumb_size
  margin-right: 10px
  background: rgb(200, 240, 200)
  -moz-border-radius: 8px
  -webkit-border-radius: 8px
  p
    color: rgb(150, 190, 150)
    font-size: 24px
    margin:
      left: 15px
      top: 7px

.time_zone
  margin-top: 10px

.show_users
  .content

  .column_wrap
    .profile
      margin-bottom: 20px
  .banner
    +rounded(5px)
    background: $navbar
    padding: 8px
    h2
      border: none
      margin: 0
      padding-left: 5px
      span.login
        color: #333333
        margin-left: 5px
        padding: 5px
        font-size: 14px
        -moz-border-radius: 5px
        -webkit-border-radius: 5px
  .content_wrap
    float: right
    padding: 10px
      left: 0px
  .column_wrap
    float: left
    .avatar
      -moz-border-radius: 4px
      -webkit-border-radius: 4px
    .biography
      border: solid 1px rgb(200, 200, 200)
      background: rgb(246, 246, 246)
      -moz-border-radius: 4px
      -webkit-border-radius: 4px
      padding: 6px
      margin-top: 4px
  .content
    h2
      font-size: 22px
      margin: 10px
        right: 0px
      padding:
        bottom: 5px
      border-bottom: solid 2px rgb(240, 240, 240)
    .comment
      span.author, span.project_arr
        display: none

.index_people
  .content
    h2
      border: none
    padding: 5px
    form.new_invitation
      font-size: 12px
      border: 1px rgb(220, 220, 220) solid
      background-color: rgb(240, 240, 240)
      padding: 10px
      margin-bottom: 10px
      +rounded(5px)
      h2
        font-size: 16px
        margin: 0 0 10px 0
        padding: 0px
      .text_field
        label
          width: 600px
  .people
    .person
      +clearing
      font-size: 12px
      padding: 5px
      margin-bottom: 5px
      .name
        float: left
        width: 350px
        h2
          margin: 0px
          font-size: 14px
      .thumb_avatar
        display: block
        margin:
          right: 10px
          bottom: 5px
        float: left
      .text
        margin-left: 68px
        .name
          display: block
          color: rgb(20, 20, 20)
          font:
            weight: bold
            size: 12px
      .person_header .actions
        float: right
        text-align: right
        width: 5.5em
        padding-top: 5px
        a
          +button
          display: block
          margin-bottom: 5px
      .edit_person
        padding: 10px
        background: $highlight
        width: 530px
        float: left
        h2
          color: rgb(80, 80, 80)
          margin: 0px
            bottom: 10px
          padding-left: 5px
        .roles
          list-style: none
          margin: 0
          padding: 0
        .actions
          margin-top: .5em
    .invitation
      border: 1px solid rgb(195, 205, 210)
      background: rgb(235, 245, 250)
      -moz-border-radius: 5px
      -webkit-border-radius: 5px
      -webkit-border-radius: 5px
      padding: 7px
      .links
        margin-top: 5px
        a
          text-decoration: underline
        span.discard
          a
            color: rgb(120, 0, 0)
  #sidebar_people
    margin-top: 1em
    ol
      list-style: none
      margin: 0
      padding: 0
      li
        clear: left
        margin-top: .4em
        min-height: $micro_size
        line-height: $micro_size
        
.column
  h2
    margin-top: 20px
  p
    margin: 10px 0

.watching
  background: rgb(250, 250, 250)
  border: solid 1px rgb(230, 230, 230)
  padding: 10px
    left: 5px
  margin-bottom: 5px
  color: rgb(160, 160, 160)
  -moz-border-radius: 4px
  -webkit-border-radius: 4px
  font-size: 12px
  .state
    font-weight: bold
    &.started
      color: rgb(50, 120, 50)
    &.stopped
      color: rgb(120, 50, 50)

.thumb_avatar
  float: left
  width: $thumb_size
  height: $thumb_size
  margin-right: 10px
  a
    display: block
    width: $thumb_size
    height: $thumb_size
    margin-right: 5px
    &.round_corners
      background: url(/images/avatar_thumb_corners.png)
    &.round_corners:hover
      background: url(/images/avatar_thumb_corners_hover.png)

.micro_avatar
  float: left
  width: $micro_size
  height: $micro_size
  margin-right: 10px
  a
    display: block
    width: $micro_size
    height: $micro_size
    margin-right: 5px
    &.round_corners
      background: url(/images/avatar_thumb_corners.png)
    &.round_corners:hover
      background: url(/images/avatar_thumb_corners_hover.png)

.card
  font-size: 12px
  h3
    font-size: 12px
    border-bottom: solid 1px rgb(200, 200, 200)
    padding-bottom: 3px
    margin-bottom: 5px
  span.type
    font-size: 11px
    color: rgb(230, 230, 230)
    background: rgb(140, 140, 140)
    padding: 1px 3px
    -moz-border-radius: 4px
    -webkit-border-radius: 4px
    text-transform: uppercase
  .item
    padding-bottom: 5px
  .vcard
    float: right

.edit_users, .update_users
  .website,.email_address
    input
      width: 300px
  .twitter
    input
      width: 240px
  .address
    label
      float: none
      display: block
      clear: both
      color: rgb(160, 160, 160)
      text-align: left
      width: auto
      padding: 0px
    .street
      input
        width: 440px
    .city
      float: left
      width: 220px
      input
        margin-right: 10px
        width: 200px
    .state
      float: left
      width: 100px
      input
        margin-right: 10px
        width: 80px
    .zip
      float: left
      width: 100px
      input
        width: 100px
    .country
      clear: both
      margin-bottom: 10px
  a.add_crm_link
    display: block
    float: right
    width: 510px
    font-size: 12px
    color: rgb(160, 160, 160)
    margin-bottom: 10px
  a.add_crm_link:hover
    color: rgb(0, 0, 200)

.index_invitations
  div.content
    padding-top: 5px

.invitations
  padding: 5px
  font-size: 12px
  .project
    border: solid 1px rgb(235, 235, 180)
    background: rgb(255, 255, 200)
    padding: 10px
    margin-bottom: 5px
    width: 580px
    .text
      margin-bottom: 15px
    form.accept_project, form.decline_project, span
      display: inline

.new_invitation
  .text_field
    input
      width: 598px
  .submit
    text-align: right
    padding-top: 8px
    width: 608px

